# get-event-sponsorship

./: .env  .gitignore  LICENSE  README.md  prospecting_agent.py
prospect-agent/: README.md  main.py  pyproject.toml
prospect-agent/extractors/: email_finder.py
prospect-agent/scrapers/: apollo_people.py  crunchbase_scraper.py
